♻️ refactor(app): edit files

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,5 @@
     "about": "about",
     "contact": "contact",
     "frontpage": "This is the front page",
-    "contactpage": "Contact page"
+    "contactPage": "Contact page"
 }
