--- a/public/locales/fi/translation.json
+++ b/public/locales/fi/translation.json
@@ -3,5 +3,5 @@
     "about": "tietoa meistä",
     "contact": "yhteys",
     "frontpage": "Tämä on etusivu",
-    "contactpage": "Yhteydenottosivu"
+    "contactPage": "yhteydenottosivu"
 }
