♻️ refactor(app): edit files

--- a/public/locales/fi/translation.json
+++ b/public/locales/fi/translation.json
@@ -12,6 +12,6 @@
         "name": "Tämä on etusivu"
     },
     "contactPage": {
-        "name": "yhteydenottosivu"
+        "name": "Yhteydenottosivu"
     }
 }
